--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^2.1.6",
+    "postcss-units": "^1.1.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
