мобильная верстка температуры пола

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/zindzay/gulp-test.git"
+    "url": "https://github.com/yulya9060/shri_2018_2.git"
   },
   "keywords": [],
   "author": "",
